# py-die-roller

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
dieroller/: __init__.py  dice.py  rng.py  table.py
source/: api.rst  conf.py  index.rst
tests/: test_dice.py  test_rng.py  test_table.py
