[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-die-roller"
version = "0.1.0"
description = "Fast PRNG wrapper for Monte Carlo simulation and game development"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.17.0",
]

[project.optional-dependencies]
extended = ["randomgen>=1.23.0"]
docs = [
    "sphinx>=7.1.2",
    "sphinx-markdown-builder>=0.6.10",
]

[project.urls]
Homepage = "https://github.com/jyurkiw/py-die-roller"

[tool.setuptools.packages.find]
include = [
    "dieroller",
    "tests"
]
exclude = [
    "source",
    "build"
]

[dependency-groups]
dev = [
    "sphinx>=7.1.2",
    "sphinx-markdown-builder>=0.6.10",
]
